--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@petfinder/petfinder-js": "^1.0.6",
     "apollo-server": "^3.8.2",
     "graphql": "^16.5.0"
   }
